# Backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.portable.yaml  docker-compose.yaml  go.mod  go.sum  prometheus.yml
.cargo/: config.toml
.github/workflows/: build.yml
api/v1/: routes.go
api/v1/handlers/: system.go
cmd/app/: app.go
docker_config/: app.toml
internal/constant/: http.go
internal/models/: custom_type.go  model_admin_table.go  model_topic_table.go  model_user_table.go  model_vote_table.go
pkg/async/: tasks.go  wrap.go
pkg/logger/: configure.go
pkg/server/: create.go
pkg/third/geetest/: validate.go
services/nats-service/: Cargo.toml
services/nats-service/src/: constants.rs  db.rs  error.rs  lib.rs
services/nats-service/src/consumer/: ballot_skip.rs  dlq.rs  mod.rs  new_compare_request.rs  save_score.rs
services/portable-service/: Cargo.toml
services/portable-service/src/: constants.rs  error.rs  lib.rs  proc.rs  state.rs  timeseries.rs  topic.rs  utils.rs
services/portable-service/src/api/: mod.rs
services/portable-service/src/api/audit/: audit_topic.rs  audit_topics_list.rs  mod.rs
services/portable-service/src/api/ballot/: ballot_create.rs  ballot_save.rs  ballot_skip.rs  bench_ballot_create.rs  bench_ballot_save.rs  mod.rs
services/portable-service/src/api/results/: mod.rs  results_1v1_matrix.rs  results_final_order.rs  results_timeseries.rs
services/portable-service/src/api/topic/: mod.rs  topic_candidate_pool.rs  topic_create.rs  topic_info.rs  topic_list_active.rs
services/service-test/: Cargo.toml
services/service-test/src/: lib.rs
services/share/: Cargo.toml  app.default.toml
services/share/src/: config.rs  lib.rs  signal.rs  snowflake.rs  tracing.rs
services/share/src/models/: api.rs  candidate_pool_preset.rs  database.rs  excel.rs  mod.rs
services/web-service/: Cargo.toml
services/web-service/src/: constants.rs  error.rs  lib.rs  state.rs  task.rs  utils.rs  worker_id.rs
services/web-service/src/api/: audit_topic.rs  create_topic.rs  get_all_active_topics_ids.rs  get_candidate_pool.rs  get_need_audit_topics.rs  get_topic_info.rs  mod.rs  new_compare.rs  openapi.rs  operators_1v1_matrix.rs  save_score.rs  utils.rs  view_final_order.rs
services/web-service/src/api/audit/: audit_topic.rs  audit_topics_list.rs  mod.rs
services/web-service/src/api/ballot/: ballot_bench_new.rs  ballot_bench_save.rs  ballot_create.rs  ballot_save.rs  ballot_skip.rs  mod.rs
services/web-service/src/api/results/: mod.rs  results_1v1_matrix.rs  results_final_order.rs
services/web-service/src/api/topic/: mod.rs  topic_candidate_pool.rs  topic_create.rs  topic_info.rs  topic_list_active.rs
services/web-service/src/service/: mod.rs  topic.rs
src/: admin.rs  cli.rs  lib.rs  main.rs
src/admin/: health.rs
static/js/: datadict.js
