[package]
name = "nats-service"
edition.workspace = true
version.workspace = true

[dependencies]
share.workspace = true

tokio.workspace = true
futures.workspace = true

thiserror.workspace = true
eyre.workspace = true

chrono.workspace = true

base64.workspace = true
serde.workspace = true
serde_json.workspace = true

async-nats.workspace = true
redis.workspace = true
mongodb.workspace = true

tracing.workspace = true
