[package]
name = "portable-service"
edition.workspace = true
version.workspace = true

[dependencies]
share.workspace = true

actix-web = "4"
tokio.workspace = true
futures.workspace = true

thiserror.workspace = true
eyre.workspace = true

chrono.workspace = true

base64.workspace = true
serde.workspace = true
serde_json.workspace = true

async-nats.workspace = true
redis.workspace = true
mongodb.workspace = true

tracing.workspace = true

parking_lot.workspace = true
dashmap.workspace = true
reqwest.workspace = true
rand.workspace = true
crossbeam-channel = "0.5.15"
uuid.workspace = true
actix-cors = "0.7.1"
moka = { version = "0.12.10", features = ["future"] }
ahash = "0.8.12"
actix-web-prom = { version = "0.10.0", features = ["process"] }
once_cell = "1.21.3"
prometheus = "0.14.0"
