[package]
name = "service-test"
edition.workspace = true
version.workspace = true

[dependencies]
share.workspace = true

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
eyre.workspace = true
tracing.workspace = true
hdrhistogram.workspace = true
governor.workspace = true
