[package]
name = "share"
edition.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true

tokio.workspace = true
async-nats.workspace = true
toml.workspace = true
utoipa.workspace = true
uuid.workspace = true

parking_lot.workspace = true
thiserror.workspace = true

sentry.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
