[package]
name = "web-service"
edition.workspace = true
version.workspace = true

[dependencies]
share.workspace = true

tokio.workspace = true
futures.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
socket2.workspace = true

utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-scalar.workspace = true

chrono.workspace = true

parking_lot.workspace = true

async-nats.workspace = true
redis.workspace = true
mongodb.workspace = true

thiserror.workspace = true
eyre.workspace = true

serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true

sentry.workspace = true
axum-prometheus.workspace = true

tracing.workspace = true

rand.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
